# anti-poaching-platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  anti-poaching-platform.py  database.py  docker-compose.development.yml  docker-compose.lint.yml  docker-compose.production.yml  docker-compose.yml  getData.py  lexicon.json  openlaw.xlsx  opt.json  opt2.json  pyproject.toml  requirements.txt  result.txt
analytics/: Dockerfile  Makefile  analyze.py  dump_db.py  getData.py  get_data.py  pyproject.toml
analytics-cli/: Dockerfile  pyproject.toml
analytics-cli/analytics/: analyze.py  sync.py  sync_data.py
analytics-cli/analytics/data/: 8.txt  9.txt  openlaw_full.xlsx  output.json  src_keywords.json  test.json
analytics-cli/analytics/lib/: data_types.py  functional.py
analytics-cli/requirements/: dev.txt  min.txt
api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 17cc2fc38779_add_defendant_table.py  423ce3813481_add_case_number_and_content_to_judgment.py  54acf0cdf6d9_add_source_relation.py  66f91403b875_add_sentence_field_with_datetime_fields_.py  a2a21f8f5f8e_update_length_for_the_name_fields.py  b736b7d54146_add_judgement_table.py  b9315239e8c8_make_source_related_to_defendant.py  d12cd1dbac38_make_genus_id_non_nullable.py  e793098ea682_create_taxon_tables.py
api/api/: config.py  dependencies.py  main.py
api/api/analytics/: __init__.py  defendant.py  judgment.py  source.py  species.py  taxon.py
api/api/analytics/judgment/: __init__.py  defendant.py  source.py
api/api/crud/: __init__.py  defendant.py  judgment.py  source.py  species.py
api/api/db/: engine.py  models.py  session.py  utils.py
api/api/lib/: __init__.py  errors.py  schemas.py
api/api/utils/: __init__.py  enums.py
api/requirements/: dev.txt  min.txt
api/tests/: conftest.py  fixtures.py  test_test_session.py
api/tests/analytics/: test_defendant.py  test_judgment.py  test_source.py  test_taxon.py
api/tests/lib/: test_errors.py  test_utils.py
client/: MANIFEST.in  openapi_client_README.md  setup.py
data/: 1.txt  4.txt  7.txt  openlaw.xlsx
db/: _DATA__202005301305.csv  _DATA__202006071341.csv  (+6 more)
(+84 files in other folders)
