[tool.mypy]
scripts_are_modules = true
show_traceback = true

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "stanfordcorenlp.*",
    "psutil.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["PIG208 <359101898@qq.com>", "Henry3510 <henrywang3510@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = ""
stanfordcorenlp = "3.9.1.1"
# Database access
psycopg2-binary = ""
passerine-client = "0.0.2"

[tool.poetry.dev-dependencies]
# Scraper utilities
beautifulsoup4 = ""
# Code linting, tooling
black = ""
isort = ""
mypy = "^0.940"
pip-tools = ""
# Typing
types-pymysql = ""
types-requests = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
