[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
target_version = ["py310"]

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["PIG208 <359101898@qq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.29"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
